force-app/main/default/objects/Historico_Sincronizacion_WS__c/Historico_Sincronizacion_WS__c.object-meta.xml
<CustomObject>
    <label>Historico Sincronización WS</label>
    <nameField>
        <displayFormat>HSW-{000000000}</displayFormat>
        <label>Nombre de Historico Sincronización WS</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historicos Sincronización WS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>