force-app/main/default/objects/Historico_Sincronizacion_WS__c/fields/Anio__c.field-meta.xml
<CustomField>
    <fullName>Anio__c</fullName>
    <formula>TEXT(YEAR( Fecha__c ))</formula>
    <label>Año</label>
    <type>Text</type>
</CustomField>