force-app/main/default/objects/Historico_Sincronizacion_WS__c/fields/Dia__c.field-meta.xml
<CustomField>
    <fullName>Dia__c</fullName>
    <formula>TEXT( DAY( Fecha__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Día</label>
    <type>Text</type>
</CustomField>