force-app/main/default/objects/Historico_Sincronizacion_WS__c/fields/Mes__c.field-meta.xml
<CustomField>
    <fullName>Mes__c</fullName>
    <formula>TEXT( MONTH( Fecha__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mes</label>
    <type>Text</type>
</CustomField>